@@ -14,6 +14,7 @@ address-edit: improvement for actions=decommisssion - extend interface (ethernet
 bugfix:
 - fix class-IpsecTunnel | related to proxy-id if <protocol> is not available
 - fix class-EthernetInterfaceStore | xpath fix
+- fix implementation of class-AggregateEthernetInterface
 
 
 1.5.14 (20180227)
